# CSE252C_visual_odometry

./: CMakeLists.txt  README.md  endoscopicCam.yaml  g2o_viewer  generatePath.m  test.yaml  visual_odom.yaml  vo
include/: draw.hpp  frame.hpp  map.hpp  optimizer.hpp
lib/: libvisual_odometry.dylib
nms/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  draw.cpp  frame.cpp  main.cpp  map.cpp  optimizer.cpp
